refactor(ageratum): 迁移注册系统并重构代码结构
- 将自定义Registrum注册系统替换为NeoForge官方DeferredRegister
- 统一使用ResourceLocation替代Identifier作为资源定位符
- 重构客户端命令系统，新增物品标签生成功能
- 更新数据生成配置以匹配新的注册系统
- 优化命令建议缓存机制，提升性能表现
- 调整键位映射分类配置，改进用户体验
- 移除过时的初始化类文件，精简代码结构