@@ -1,34 +1,29 @@
 package dev.anvilcraft.resource.ageratum.client.feat.markdown.component.extend;
 
+import com.mojang.blaze3d.platform.Lighting;
+import com.mojang.blaze3d.systems.RenderSystem;
+import com.mojang.blaze3d.vertex.PoseStack;
 import com.mojang.brigadier.StringReader;
-import dev.anvilcraft.lib.v2.font.AnvilLibFont;
 import dev.anvilcraft.resource.ageratum.client.feat.markdown.MDExtensionContext;
 import dev.anvilcraft.resource.ageratum.client.feat.markdown.MDRenderContext;
 import dev.anvilcraft.resource.ageratum.client.feat.markdown.component.MDComponent;
 import dev.anvilcraft.resource.ageratum.client.feat.markdown.component.MDTextComponent;
 import dev.anvilcraft.resource.ageratum.client.util.level.SandboxRenderLevel;
-import lombok.extern.slf4j.Slf4j;
 import net.minecraft.ChatFormatting;
 import net.minecraft.client.Minecraft;
-import net.minecraft.client.gui.GuiGraphicsExtractor;
-import net.minecraft.client.renderer.entity.state.EntityRenderState;
+import net.minecraft.client.gui.GuiGraphics;
+import net.minecraft.client.renderer.entity.EntityRenderDispatcher;
 import net.minecraft.core.Holder;
-import net.minecraft.core.Registry;
+import net.minecraft.core.HolderLookup;
 import net.minecraft.core.registries.Registries;
 import net.minecraft.nbt.CompoundTag;
-import net.minecraft.nbt.NbtOps;
-import net.minecraft.nbt.Tag;
 import net.minecraft.nbt.TagParser;
 import net.minecraft.network.chat.Component;
-import net.minecraft.resources.Identifier;
 import net.minecraft.resources.ResourceKey;
-import net.minecraft.util.ProblemReporter;
+import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.entity.Entity;
-import net.minecraft.world.entity.EntitySpawnReason;
 import net.minecraft.world.entity.EntityType;
 import net.minecraft.world.entity.LivingEntity;
-import net.minecraft.world.level.storage.TagValueInput;
-import org.joml.Matrix3x2fStack;
 import org.joml.Quaternionf;
 import org.joml.Vector2f;
 import org.joml.Vector3f;
@@ -39,16 +34,15 @@ import javax.annotation.Nullable;
 /**
  * 实体展示组件，使用背包界面同款实体预览渲染。
  */
-@Slf4j
 public final class MDEntityComponent extends MDComponent {
-    private final Identifier entityId;
+    private final ResourceLocation entityId;
     private final CompoundTag entityNbt;
     private final boolean showText;
     private @Nullable Entity cachedEntity;
     private @Nullable SandboxRenderLevel cachedLevel;
     private Vector2f entityBbSize = new Vector2f(1.0F, 1.0F);
 
-    public MDEntityComponent(Identifier entityId, CompoundTag entityNbt, boolean showText) {
+    public MDEntityComponent(ResourceLocation entityId, CompoundTag entityNbt, boolean showText) {
         super(Component.literal("[entity load failed]").withStyle(ChatFormatting.RED));
         this.entityId = entityId;
         this.entityNbt = entityNbt;
@@ -56,13 +50,13 @@ public final class MDEntityComponent extends MDComponent {
     }
 
     @Override
-    public void extractRenderState(MDRenderContext context) {
-        GuiGraphicsExtractor graphics = context.graphics();
+    public void render(MDRenderContext context) {
+        GuiGraphics graphics = context.graphics();
         Minecraft minecraft = context.minecraft();
 
         Entity entity = this.getEntity();
         if (entity == null) {
-            super.extractRenderState(context);
+            super.render(context);
             return;
         }
 
@@ -75,24 +69,25 @@ public final class MDEntityComponent extends MDComponent {
         int y2 = contentHeight - 4;
 
         graphics.fill(drawX, 0, drawX + contentWidth, contentHeight, 0x22000000);
-        graphics.outline(drawX, 0, contentWidth, contentHeight, 0x66000000);
+        graphics.renderOutline(drawX, 0, contentWidth, contentHeight, 0x66000000);
 
         if (this.showText) {
             Component hoverName = entity.getType().getDescription();
             int nameWidth = minecraft.font.width(hoverName);
-            graphics.anvillib$text(AnvilLibFont.getSelectFont(), hoverName, drawX + contentWidth / 2 - nameWidth / 2, contentHeight + 2, 0x000000, false);
+            graphics.drawString(minecraft.font, hoverName, drawX + contentWidth / 2 - nameWidth / 2, contentHeight + 2, 0x000000, false);
         }
 
-//        context.enableScissor(drawX + 1, 1, drawX + contentWidth - 1, contentHeight - 1);
-        Matrix3x2fStack pose = graphics.pose();
-        pose.pushMatrix();
+        context.enableScissor(drawX + 1, 1, drawX + contentWidth - 1, contentHeight - 1);
+        PoseStack pose = graphics.pose();
+        pose.pushPose();
         MDEntityComponent.renderEntity(context, graphics, x1, y1, x2, y2, this.getScale(entity, context.scale()), entity);
-        pose.popMatrix();
-//        context.disableScissor();
+        pose.popPose();
+        context.disableScissor();
     }
 
+    @SuppressWarnings("MathClampMigration")
     private int getContentWidth(int maxX) {
-        return Math.clamp(Math.round(this.entityBbSize.x), 64, maxX);
+        return Math.min(Math.max(Math.round(this.entityBbSize.x), 64), maxX);
     }
 
     private int getContentHeight() {
@@ -121,7 +116,7 @@ public final class MDEntityComponent extends MDComponent {
 
     private static void renderEntity(
         MDRenderContext context,
-        GuiGraphicsExtractor graphics,
+        GuiGraphics graphics,
         int x1,
         int y1,
         int x2,
@@ -152,14 +147,15 @@ public final class MDEntityComponent extends MDComponent {
             living.yHeadRotO = living.getYRot();
         }
         Vector3f translate = new Vector3f(0.0F, entity.getBbHeight() / 2.0F, entity.getBbWidth() / -2.0F);
-        EntityRenderState entityRenderState = context.minecraft().getEntityRenderDispatcher().extractEntity(entity, 0);
-        graphics.entity(
-            entityRenderState,
+        MDEntityComponent.renderEntity(
+            graphics,
+            centerX,
+            centerY,
             scale,
             translate,
             pose,
-            new Quaternionf(),
-            x1, y1, x2, y2
+            cameraOrientation,
+            entity
         );
         entity.setYRot(yRot);
         entity.setXRot(xRot);
@@ -170,6 +166,46 @@ public final class MDEntityComponent extends MDComponent {
         }
     }
 
+    private static void renderEntity(
+        GuiGraphics guiGraphics,
+        float x,
+        float y,
+        float scale,
+        Vector3f translate,
+        Quaternionf pose,
+        @Nullable Quaternionf cameraOrientation,
+        Entity entity
+    ) {
+        guiGraphics.pose().pushPose();
+        guiGraphics.pose().translate(x, y, 50.0);
+        guiGraphics.pose().scale(scale, scale, -scale);
+        guiGraphics.pose().translate(translate.x, translate.y, translate.z);
+        guiGraphics.pose().mulPose(pose);
+        Lighting.setupForEntityInInventory();
+        EntityRenderDispatcher entityrenderdispatcher = Minecraft.getInstance().getEntityRenderDispatcher();
+        if (cameraOrientation != null) {
+            entityrenderdispatcher.overrideCameraOrientation(cameraOrientation.conjugate(new Quaternionf()).rotateY((float) Math.PI));
+        }
+
+        entityrenderdispatcher.setRenderShadow(false);
+        // noinspection deprecation
+        RenderSystem.runAsFancy(() -> entityrenderdispatcher.render(
+            entity,
+            0.0,
+            0.0,
+            0.0,
+            0.0F,
+            1.0F,
+            guiGraphics.pose(),
+            guiGraphics.bufferSource(),
+            15728880
+        ));
+        guiGraphics.flush();
+        entityrenderdispatcher.setRenderShadow(true);
+        guiGraphics.pose().popPose();
+        Lighting.setupFor3DItems();
+    }
+
     private @Nullable Entity getEntity() {
         if (this.cachedEntity != null && this.cachedLevel != null) {
             return this.cachedEntity;
@@ -178,23 +214,20 @@ public final class MDEntityComponent extends MDComponent {
         if (Minecraft.getInstance().level == null) return null;
         SandboxRenderLevel level = new SandboxRenderLevel();
 
-        Optional<Registry<EntityType<?>>> lookup = level.registryAccess().lookup(Registries.ENTITY_TYPE);
+        Optional<HolderLookup.RegistryLookup<EntityType<?>>> lookup = level.registryAccess().lookup(Registries.ENTITY_TYPE);
         if (lookup.isEmpty()) {
             return null;
         }
 
-        Optional<Holder.Reference<EntityType<?>>> entityTypeRef = lookup.get()
-            .get(ResourceKey.create(Registries.ENTITY_TYPE, this.entityId));
+        Optional<Holder.Reference<EntityType<?>>> entityTypeRef = lookup.get().get(
+            ResourceKey.create(Registries.ENTITY_TYPE, this.entityId));
         if (entityTypeRef.isEmpty()) {
             return null;
         }
 
-        Entity entity = entityTypeRef.get().value().create(level, EntitySpawnReason.LOAD);
+        Entity entity = entityTypeRef.get().value().create(level);
         if (entity == null) return null;
-
-        try (ProblemReporter.ScopedCollector reporter = new ProblemReporter.ScopedCollector(entity.problemPath(), log)) {
-            entity.load(TagValueInput.create(reporter, entity.registryAccess(), this.entityNbt));
-        }
+        entity.load(this.entityNbt);
 
         this.cachedLevel = level;
         this.cachedEntity = entity;
@@ -208,9 +241,9 @@ public final class MDEntityComponent extends MDComponent {
             return new MDTextComponent("[错误：entity 需要 id 参数]");
         }
 
-        Identifier id;
+        ResourceLocation id;
         try {
-            id = Identifier.parse(rawId);
+            id = ResourceLocation.parse(rawId);
         } catch (Exception exception) {
             return new MDTextComponent("[错误：entity 的 id 参数格式无效]");
         }
@@ -218,8 +251,7 @@ public final class MDEntityComponent extends MDComponent {
         CompoundTag nbt = new CompoundTag();
         String rawNbt = context.params().get("nbt");
         try {
-            Tag tag = TagParser.create(NbtOps.INSTANCE).parseAsArgument(new StringReader(rawNbt));
-            if (tag instanceof CompoundTag compoundTag) nbt = compoundTag;
+            nbt = new TagParser(new StringReader(rawNbt)).readStruct();
         } catch (Exception ignore) {
         }
 
